--- a/index.html
+++ b/index.html
@@ -6,100 +6,95 @@
 
 	<title>HomePage</title>
 
-	<link rel="stylesheet" href="css/button.css">
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="css/header.css">
+	
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<header class="">
-		<nav>
-			<div class="navbar-brand d-flex justify-content-center">
-				<img class="d-block" src="images/logo.png" alt="logo">
-			</div>
+	<header>
 
-			<div class="navbar p-0">
-				<div class="nav-menu d-flex">
-					<div class="dropdown">
-						<button type="button" class="btn btn-primary" data-toggle="dropdown">
-							<i class="fas fa-bars"></i>
-						</button>
-						<div class="dropdown-menu">
-							<ul>
-								<li class="dropdown-toggle" data-toggle="dropdown">Phim
-									<ul class="dropdown-menu">
-										<a class="dropdown-item" href="#">Phim đang chiếu</a>
-										<a class="dropdown-item" href="#">Phim sắp chiếu</a>
-									</ul>
-								</li>	
-								<li>Rạp CGV
-									<ul>
-										<li>Tất cả các rạp</li>
-										<li>Rạp đặc biệt</li>
-										<li>Rạp sắp mở</li>
-									</ul>
-								</li>
-								<li>Thành viên
-									<ul>
-										<li>Tài khoản CGV</li>
-										<li>Quyền lợi</li>
-									</ul>
-								</li>
-								<li>Cultureplex
-									<ul>
-										<li>Quầy online</li>
-										<li>Sự kiện & vé nhóm</li>
-										<li>e-CGV</li>
-										<li>CGV Restaurant</li>
-										<li>Thẻ quà tặng</li>
-									</ul>
-								</li>
-							</div>
+		<!-- logo on small  screen-->
+		<div class="navbar-brand d-flex justify-content-center">
+			<img class="d-block" src="images/logo.png" alt="logo">
+		</div>
+
+		<!-- navbar on small screen -->
+		<div class="d-flex justify-content-around">
+
+			<div  class="nav__item flex-fill border-left-0">
+				<i class="fas fa-bars"></i>
+				<div class="content-list">
+					<div>
+						<div class="dropdown-toggle" data-toggle="dropdown">Phim</div>
+						<div class="dropdown-menu content-list--child border-right-0">
+							<a class="dropdown-item" href="#">Phim đang chiếu</a>
+							<a class="dropdown-item" href="#">Phim sắp chiếu</a>
+							<a class="dropdown-item" href="#">Link 3</a>
 						</div>
-
-						<div class="dropdown">
-							<button type="button" class="btn btn-primary" data-toggle="dropdown">
-								<i class="fas fa-search"></i>
-							</button>
-							<div class="dropdown-menu">
-								<input type="text">
-							</div>
-						</div>
-
-
-						<div class="dropdown">
-							<button type="button" class="btn btn-primary" data-toggle="dropdown">
-								<i class="fas fa-search"></i>
-							</button>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">TÀI KHOẢN 1</a>
-								<a class="dropdown-item" href="#">ĐĂNG KÝ</a>
-								<a class="dropdown-item" href="#">ĐĂNG NHÂP</a>
-							</div>
-						</div>
-
-						<div class="dropdown">
-							<button type="button" class="btn btn-primary" data-toggle="dropdown">
-								<i class="fas fa-search"></i>
-							</button>
-							<div class="dropdown-menu">
-								<input type="text">
-							</div>
-						</div>
-
 					</div>
+					
 				</div>
-
-
 			</div>
-			<!-- 	<span class="btn btn-light flex-fill"><i class="fas fa-bars"></i></span>
-				<span class="btn btn-light flex-fill"><i class="fas fa-search"></i></span>
-				<span class="btn btn-light flex-fill"><i class="fas fa-user"></i></span>
-				<span class="btn btn-light flex-fill"><i class="fas fa-exchange-alt"></i></span> -->
+			
+			<div class="nav__item flex-fill">
+				<i class="fas fa-search"></i>
+				<input class="content-list" type="text" placeholder="Tìm kiếm">
 			</div>
-		</nav>
+			
+
+			<div class="nav__item flex-fill">
+				<div class="dropdown-toggle" data-toggle="dropdown"><i class="fas fa-user"></i></div>
+				<div class="dropdown-menu content-list m-0">
+					<a class="dropdown-item" href="#">Link 1</a>
+					<a class="dropdown-item" href="#">Link 2</a>
+					<a class="dropdown-item" href="#">Link 3</a>
+				</div>
+			</div>
+			<div class="nav__item flex-fill border-right-0"><i class="fas fa-exchange-alt"></i></div>
+
+		</div>
+		<!-- end navbar -->
+
+		<aside>
+			
+		</aside>
+
 	</header>
+
+	<div>
+		<div id="demo" class="carousel slide" data-ride="carousel">
+
+			<!-- Indicators -->
+			<ul class="carousel-indicators">
+				<li data-target="#demo" data-slide-to="0" class="active"></li>
+				<li data-target="#demo" data-slide-to="1"></li>
+				<li data-target="#demo" data-slide-to="2"></li>
+			</ul>
+
+			<!-- The slideshow -->
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="images/sl.jpg" alt="Los Angeles" width="373" height="171">
+				</div>
+				<div class="carousel-item">
+					<img src="images/slide1.png" alt="Chicago" width="373" height="171">
+				</div>
+				<div class="carousel-item">
+					<img src="images/slide3.jpg" alt="New York" width="373" height="171">
+				</div>
+			</div>
+
+			<!-- Left and right controls -->
+			<a class="carousel-control-prev" href="#demo" data-slide="prev">
+				<span class="carousel-control-prev-icon"></span>
+			</a>
+			<a class="carousel-control-next" href="#demo" data-slide="next">
+				<span class="carousel-control-next-icon"></span>
+			</a>
+		</div>
+	</div>
 </body>
 </html>
